--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -17,3 +17,5 @@ ruby:
   description: Ruby is the fastest growing and most dynamic language out there. If you need to get working programs delivered fast, you should add Ruby to your toolbox.
   price: 49.50
   image_url: ruby.jpg
+
+# rails 8 book uses blobs for attached images instead of these image urls
